--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div> 
     <h4><a href="https://xhu-yyweb.rhcloud.com/" style="color:black" target="_blank">西华大学农业机械工程研究所</a></h4> 
 
-    <h4><a href="#" style="color:black">打字练习</h4> 
+    <h4><a href="#" style="color:black">打字练习(未上线)...</h4> 
 
    </div> 
   </div> 
